# miscmath

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE  README.md
.fleet/: run.json
src/: lib.rs  linear.rs  main.rs  math.rs  math_tests.rs  prelude.rs
src/dw/math/: linear.rs
src/dw/math/linear/: vec2.rs
src/linear/: vector.rs
src/math/: linear.rs
src/math/linear/: vector.rs
src/math/linear/vector/: vec2.rs  vec2_tests.rs
