[package]
name = "mathlib_rust"
version = "0.1.0"
authors = ["Devon Webb <devonwebb559@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_ecs = "0.9.1"
nalgebra = "0.31.4"
slotmap = "1.0.6"