[package]
name = "miscmath"
description = "miscmath is a collection of general math functions and linear algebra structures like vectors and matrices."
version = "0.1.8"
license = "MIT OR Apache-2.0"
repository = "https://github.com/devonwebbR2K/miscmath"
authors = ["devonwebbR2K <devonwebb559@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"